test/log/scons15.out
scons: Reading SConscript files ...
v0.1-528-g95b21bfb
scons: done reading SConscript files.
scons: Building targets ...
g++-11 -o CommandStack.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql CommandStack.cpp
g++-11 -o DC.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -DVERSION=\"v0.1-528-g95b21bfb\" "-DBUILD_TIME=\"2022-03-02 18:38:56\"" -Iinclude DC.cpp
g++-11 -o Leaderboard.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql Leaderboard.cpp
g++-11 -o MobActivity.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql MobActivity.cpp
g++-11 -o Timer.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql Timer.cpp
g++-11 -o Trace.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql Trace.cpp
g++-11 -o act.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql act.cpp
g++-11 -o act_comm.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql act_comm.cpp
g++-11 -o act_info.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql act_info.cpp
g++-11 -o alias.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql alias.cpp
g++-11 -o arena.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql arena.cpp
g++-11 -o assign_proc.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql assign_proc.cpp
g++-11 -o auction.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql auction.cpp
g++-11 -o ban.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql ban.cpp
g++-11 -o board.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql board.cpp
g++-11 -o casino.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql casino.cpp
g++-11 -o channel.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql channel.cpp
g++-11 -o cl_barbarian.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_barbarian.cpp
g++-11 -o cl_mage.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_mage.cpp
g++-11 -o cl_monk.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_monk.cpp
g++-11 -o cl_paladin.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_paladin.cpp
g++-11 -o cl_ranger.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_ranger.cpp
g++-11 -o cl_thief.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_thief.cpp
g++-11 -o cl_warrior.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_warrior.cpp
g++-11 -o clan.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql clan.cpp
g++-11 -o class.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql class.cpp
g++-11 -o combinables.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql combinables.cpp
g++-11 -o comm.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql comm.cpp
g++-11 -o const.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql const.cpp
g++-11 -o corpse.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql corpse.cpp
g++-11 -o db.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql db.cpp
g++-11 -o dcastle.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude dcastle.cpp
g++-11 -o guild.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql guild.cpp
g++-11 -o ki.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql ki.cpp
g++-11 -o fount.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql fount.cpp
g++-11 -o help.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql help.cpp
g++-11 -o golem.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql golem.cpp
g++-11 -o info.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql info.cpp
g++-11 -o innate.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql innate.cpp
g++-11 -o inventory.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql inventory.cpp
g++-11 -o handler.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql handler.cpp
g++-11 -o group.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql group.cpp
g++-11 -o limits.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql limits.cpp
g++-11 -o fight.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql fight.cpp
g++-11 -o game_portal.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql game_portal.cpp
g++-11 -o interp.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql interp.cpp
g++-11 -o non_off.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql non_off.cpp
g++-11 -o offense.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql offense.cpp
g++-11 -o nlog.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql nlog.cpp
g++-11 -o nullfile.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql nullfile.cpp
g++-11 -o objects.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql objects.cpp
g++-11 -o news.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql news.cpp
g++-11 -o new_edit.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql new_edit.cpp
g++-11 -o quest.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql quest.cpp
g++-11 -o nanny.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql nanny.cpp
g++-11 -o obj_proc.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql obj_proc.cpp
g++-11 -o wiz_102.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_102.cpp
g++-11 -o wiz_104.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_104.cpp
g++-11 -o who.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql who.cpp
g++-11 -o wiz_108.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_108.cpp
g++-11 -o wiz_103.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_103.cpp
g++-11 -o token.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql token.cpp
g++-11 -o wiz_106.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_106.cpp
g++-11 -o vault.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql vault.cpp
g++-11 -o wiz_107.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_107.cpp
g++-11 -o wiz_109.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_109.cpp
g++-11 -o wizard.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wizard.cpp
g++-11 -o wiz_110.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_110.cpp
g++-11 -o wiz_101.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_101.cpp
g++-11 -o wiz_105.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_105.cpp
Leaderboard.cpp: In member function 'void Leaderboard::read_file()':
Leaderboard.cpp:1086:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1086 |         if (!(fl = dc_fopen(LEADERBOARD_FILE, "r"))) {
      |                    ^~~~~~~~
      |                    do_open
g++-11 -o weather.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql weather.cpp
Leaderboard.cpp:1198:17: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1198 |                 dc_fclose(fl);
      |                 ^~~~~~~~~
      |                 do_close
g++-11 -o utility.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql utility.cpp
Leaderboard.cpp: In member function 'void Leaderboard::write_file(const char*)':
Leaderboard.cpp:1219:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1219 |         if (!(fl = dc_fopen(filename, "w"))) {
      |                    ^~~~~~~~
      |                    do_open
g++-11 -o modify.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql modify.cpp
Leaderboard.cpp:1260:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1260 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
g++-11 -o mob_prog.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_prog.cpp
g++-11 -o mob_act.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_act.cpp
g++-11 -o mob_proc.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_proc.cpp
g++-11 -o mob_proc2.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_proc2.cpp
g++-11 -o move.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql move.cpp
g++-11 -o mob_commands.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_commands.cpp
Leaderboard.cpp: In function 'int do_leaderboard(char_data*, char*, int)':
Leaderboard.cpp:1360:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1360 |         if (!(fl = dc_fopen(LEADERBOARD_FILE, "r"))) {
      |                    ^~~~~~~~
      |                    do_open
Leaderboard.cpp:1459:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1459 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
g++-11 -o magic.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql magic.cpp
g++-11 -o memory.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql memory.cpp
g++-11 -o meta.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql meta.cpp
Leaderboard.cpp: In member function 'void Leaderboard::rename(char*, char*)':
Leaderboard.cpp:1852:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1852 |         if (!(fl = dc_fopen(LEADERBOARD_FILE, "r"))) {
      |                    ^~~~~~~~
      |                    do_open
Leaderboard.cpp:1860:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1860 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
g++-11 -o save.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql save.cpp
Leaderboard.cpp:1875:28: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1875 |                 if (!(fl = dc_fopen(LEADERBOARD_FILE, "w"))) {
      |                            ^~~~~~~~
      |                            do_open
g++-11 -o shop.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql shop.cpp
g++-11 -o sing.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql sing.cpp
g++-11 -o social.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql social.cpp
g++-11 -o spec.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql spec.cpp
g++-11 -o spells.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql spells.cpp
g++-11 -o stat.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql stat.cpp
g++-11 -o showplayerxp.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude showplayerxp.cpp
scons: *** [Leaderboard.o] Error 1
auction.cpp: In member function 'void AuctionHouse::Load()':
auction.cpp:836:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  836 |   the_file = dc_fopen(file_name.c_str(), "r");
      |              ^~~~~~~~
      |              do_open
auction.cpp:892:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  892 |   dc_fclose(the_file);
      |   ^~~~~~~~~
      |   do_close
auction.cpp: In member function 'void AuctionHouse::Save()':
auction.cpp:911:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  911 |   the_file = dc_fopen(temp_file_name.c_str(), "w");
      |              ^~~~~~~~
      |              do_open
auction.cpp:972:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  972 |   dc_fclose(the_file);
      |   ^~~~~~~~~
      |   do_close
auction.cpp: In member function 'void AuctionHouse::BuyItem(CHAR_DATA*, unsigned int)':
auction.cpp:1256:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1256 |   if (!(fl = dc_fopen(WEB_AUCTION_FILE,"r"))) {
      |              ^~~~~~~~
      |              do_open
auction.cpp:1266:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1266 |   dc_fclose(fl);
      |   ^~~~~~~~~
      |   do_close
auction.cpp:1269:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1269 |   if (!(fl = dc_fopen(WEB_AUCTION_FILE,"w"))) {
      |              ^~~~~~~~
      |              do_open
casino.cpp: In function 'void save_slot_machines()':
casino.cpp:1905:11: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1905 |   if((f = dc_fopen(buf, "w")) == NULL) {
      |           ^~~~~~~~
      |           do_open
casino.cpp:1917:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1917 |   dc_fclose(f);
      |   ^~~~~~~~~
      |   do_close
scons: *** [casino.o] Error 1
board.cpp: In function 'int save_boards()':
board.cpp:550:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  550 |   the_file = dc_fopen("board/index", "w");
      |              ^~~~~~~~
      |              do_open
db.cpp: In function 'int do_write_skillquest(char_data*, char*, int)':
db.cpp:445:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  445 |         if (!(fl = dc_fopen(SKILL_QUEST_FILE, "w")))
      |                    ^~~~~~~~
      |                    do_open
db.cpp:457:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  457 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
db.cpp: In function 'void load_skillquests()':
db.cpp:469:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  469 |         if (!(fl = dc_fopen(SKILL_QUEST_FILE, "r")))
      |                    ^~~~~~~~
      |                    do_open
db.cpp:501:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  501 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
db.cpp: In function 'void boot_db()':
db.cpp:565:29: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  565 |         if (!(new_help_fl = dc_fopen(NEW_HELP_FILE, "r"))) {
      |                             ^~~~~~~~
      |                             do_open
scons: *** [auction.o] Error 1
board.cpp:571:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  571 |   dc_fclose(the_file);
      |   ^~~~~~~~~
      |   do_close
db.cpp:570:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  570 |         dc_fclose(new_help_fl);
      |         ^~~~~~~~~
      |         do_close
corpse.cpp: In function 'void save_corpses()':
corpse.cpp:218:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  218 |         if (!(fp = dc_fopen(CORPSE_FILE, "w"))) {
      |                    ^~~~~~~~
      |                    do_open
corpse.cpp:236:33: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  236 |                                 dc_fclose(fp);
      |                                 ^~~~~~~~~
      |                                 do_close
db.cpp:572:29: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  572 |         if (!(new_help_fl = dc_fopen(NEW_HELP_FILE, "r"))) {
      |                             ^~~~~~~~
      |                             do_open
db.cpp:583:25: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  583 |         if (!(help_fl = dc_fopen(HELP_KWRD_FILE, "r"))) {
      |                         ^~~~~~~~
      |                         do_open
board.cpp: In function 'void board_save_board(std::map<std::__cxx11::basic_string<char>, BOARD_INFO>::iterator)':
board.cpp:865:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  865 |   the_file = dc_fopen(board->second.save_file.c_str(), "w");
      |              ^~~~~~~~
      |              do_open
corpse.cpp:242:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  242 |         dc_fclose(fp);
      |         ^~~~~~~~~
      |         do_close
corpse.cpp: In function 'void load_corpses()':
corpse.cpp:268:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  268 |         if (!(fp = dc_fopen(CORPSE_FILE, "r"))) {
      |                    ^~~~~~~~
      |                    do_open
board.cpp:889:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  889 |   dc_fclose(the_file);
      |   ^~~~~~~~~
      |   do_close
help.cpp: In function 'int do_reload_help(char_data*, char*, int)':
help.cpp:606:22: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  606 |   if(!(new_help_fl = dc_fopen(NEW_HELP_FILE, "r"))) {
      |                      ^~~~~~~~
      |                      do_open
board.cpp: In function 'void board_load_board()':
board.cpp:922:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  922 |     the_file = dc_fopen((*map_it).second.save_file.c_str(), "r");
      |                ^~~~~~~~
      |                do_open
db.cpp: In function 'void do_godlist()':
db.cpp:722:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  722 |         if (!(fl = dc_fopen("../lib/wizlist.txt", "r"))) {
      |                    ^~~~~~~~
      |                    do_open
db.cpp:725:17: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  725 |                 dc_fclose(fl);
      |                 ^~~~~~~~~
      |                 do_close
help.cpp:612:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  612 |   dc_fclose(new_help_fl);
      |   ^~~~~~~~~
      |   do_close
help.cpp:614:22: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  614 |   if(!(new_help_fl = dc_fopen(NEW_HELP_FILE, "r"))) {
      |                      ^~~~~~~~
      |                      do_open
corpse.cpp:488:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  488 |         dc_fclose(fp);
      |         ^~~~~~~~~
      |         do_close
board.cpp:930:7: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  930 |       dc_fclose(the_file);
      |       ^~~~~~~~~
      |       do_close
db.cpp:742:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  742 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
board.cpp:952:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  952 |     dc_fclose(the_file);
      |     ^~~~~~~~~
      |     do_close
help.cpp: In function 'void save_help(char_data*)':
help.cpp:795:11: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  795 |   if((f = dc_fopen(file, "w")) == NULL) {
      |           ^~~~~~~~
      |           do_open
help.cpp:820:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  820 |   dc_fclose(f);
      |   ^~~~~~~~~
      |   do_close
help.cpp:827:11: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  827 |   if((f = dc_fopen(file, "w")) == NULL) {
      |           ^~~~~~~~
      |           do_open
db.cpp: In function 'void write_wizlist(const char*)':
db.cpp:773:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  773 |         if (!(fl = dc_fopen(filename, "w"))) {
      |                    ^~~~~~~~
      |                    do_open
db.cpp:786:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  786 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
db.cpp: In function 'index_data* generate_mob_indices(int*, index_data*)':
db.cpp:1006:30: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1006 |           if (!(flMobIndex = dc_fopen(MOB_INDEX_FILE_TINY, "r"))) {
      |                              ^~~~~~~~
      |                              do_open
db.cpp:1012:24: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1012 |     if (!(flMobIndex = dc_fopen(MOB_INDEX_FILE, "r"))) {
      |                        ^~~~~~~~
      |                        do_open
db.cpp:1034:28: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1034 |                 if (!(fl = dc_fopen(endfile, "r")))
      |                            ^~~~~~~~
      |                            do_open
db.cpp:1079:17: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1079 |                 dc_fclose(fl);
      |                 ^~~~~~~~~
      |                 do_close
db.cpp:1082:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1082 |         dc_fclose(flMobIndex);
      |         ^~~~~~~~~
      |         do_close
db.cpp: In function 'index_data* generate_obj_indices(int*, index_data*)':
db.cpp:1303:28: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1303 |         if (!(flObjIndex = dc_fopen(OBJECT_INDEX_FILE, "r"))) {
      |                            ^~~~~~~~
      |                            do_open
db.cpp:1330:28: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1330 |                 if (!(fl = dc_fopen(endfile, "r")))
      |                            ^~~~~~~~
      |                            do_open
db.cpp:1374:17: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1374 |                 dc_fclose(fl);
      |                 ^~~~~~~~~
      |                 do_close
db.cpp:1378:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1378 |         dc_fclose(flObjIndex);
      |         ^~~~~~~~~
      |         do_close
db.cpp: In function 'void boot_world()':
db.cpp:1951:26: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1951 |     if (!(flWorldIndex = dc_fopen(WORLD_INDEX_FILE_TINY, "r")))
      |                          ^~~~~~~~
      |                          do_open
db.cpp:1959:26: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1959 |     if (!(flWorldIndex = dc_fopen(WORLD_INDEX_FILE, "r")))
      |                          ^~~~~~~~
      |                          do_open
db.cpp:1982:28: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1982 |                 if (!(fl = dc_fopen(endfile, "r")))
      |                            ^~~~~~~~
      |                            do_open
db.cpp:2005:17: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 2005 |                 dc_fclose(fl);
      |                 ^~~~~~~~~
      |                 do_close
db.cpp:2008:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 2008 |         dc_fclose(flWorldIndex);
      |         ^~~~~~~~~
      |         do_close
db.cpp: In function 'void boot_zones()':
db.cpp:2562:37: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 2562 |                 if (!(flZoneIndex = dc_fopen(ZONE_INDEX_FILE, "r")))
      |                                     ^~~~~~~~
      |                                     do_open
db.cpp:2568:36: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 2568 |         } else if (!(flZoneIndex = dc_fopen(ZONE_INDEX_FILE_TINY, "r")))
      |                                    ^~~~~~~~
      |                                    do_open
db.cpp:2587:28: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 2587 |                 if (!(fl = dc_fopen(endfile, "r")))
      |                            ^~~~~~~~
      |                            do_open
db.cpp:2598:17: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 2598 |                 dc_fclose(fl);
      |                 ^~~~~~~~~
      |                 do_close
db.cpp:2604:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 2604 |         dc_fclose(flZoneIndex);
      |         ^~~~~~~~~
      |         do_close
scons: *** [corpse.o] Error 1
clan.cpp: In function 'void boot_clans()':
clan.cpp:91:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
   91 |         if (!(fl = dc_fopen("../lib/clan.txt", "r"))) {
      |                    ^~~~~~~~
      |                    do_open
clan.cpp:95:17: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
   95 |                 dc_fclose(fl);
      |                 ^~~~~~~~~
      |                 do_close
clan.cpp:240:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  240 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
clan.cpp: In function 'void save_clans()':
clan.cpp:257:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  257 |         if (!(fl = dc_fopen("../lib/clan.txt", "w"))) {
      |                    ^~~~~~~~
      |                    do_open
game_portal.cpp: In function 'void load_game_portals()':
game_portal.cpp:73:20: error: 'dc_fopen' was not declared in this scope; did you mean 'fopen'?
   73 |     if((cur_file = dc_fopen(buf, "r")) == 0)
      |                    ^~~~~~~~
      |                    fopen
game_portal.cpp:115:5: error: 'dc_fclose' was not declared in this scope; did you mean 'fclose'?
  115 |     dc_fclose(cur_file);
      |     ^~~~~~~~~
      |     fclose
clan.cpp:362:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  362 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
golem.cpp: In function 'void save_golem_data(CHAR_DATA*)':
golem.cpp:172:18: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  172 |   if (!(fpfile = dc_fopen(file,"w")))
      |                  ^~~~~~~~
      |                  do_open
golem.cpp:183:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  183 |   dc_fclose(fpfile);
      |   ^~~~~~~~~
      |   do_close
scons: *** [help.o] Error 1
golem.cpp: In function 'void save_charmie_data(CHAR_DATA*)':
golem.cpp:207:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  207 |     if (!(fpfile = dc_fopen(file, "w")))
      |                    ^~~~~~~~
      |                    do_open
clan.cpp:372:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  372 |   if (!(fl = dc_fopen(ssbuffer.str().c_str(), "w")))
      |              ^~~~~~~~
      |              do_open
golem.cpp:214:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  214 |     dc_fclose(fpfile);
      |     ^~~~~~~~~
      |     do_close
golem.cpp: In function 'void load_golem_data(CHAR_DATA*, int)':
golem.cpp:275:18: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  275 |   if (!(fpfile = dc_fopen(file,"r")))
      |                  ^~~~~~~~
      |                  do_open
golem.cpp:295:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  295 |   dc_fclose(fpfile);
      |   ^~~~~~~~~
      |   do_close
db.cpp: In function 'int file_to_string(const char*, char*)':
db.cpp:5504:20: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 5504 |         if (!(fl = dc_fopen(name, "r")))
      |                    ^~~~~~~~
      |                    do_open
scons: *** [board.o] Error 1
db.cpp:5532:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 5532 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
news.cpp: In function 'void savenews()':
news.cpp:76:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
   76 |   if (!(fl = dc_fopen("news.data", "w")))
      |              ^~~~~~~~
      |              do_open
news.cpp:89:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
   89 |   dc_fclose(fl);
      |   ^~~~~~~~~
      |   do_close
interp.cpp: In function 'void automail(char*)':
interp.cpp:1294:10: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1294 |   blah = dc_fopen("../lib/whassup.txt", "w");
      |          ^~~~~~~~
      |          do_open
news.cpp: In function 'void loadnews()':
news.cpp:98:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
   98 |   if (!(fl = dc_fopen("news.data", "r")))
      |              ^~~~~~~~
      |              do_open
interp.cpp:1296:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1296 |   dc_fclose(blah);
      |   ^~~~~~~~~
      |   do_close
obj_proc.cpp: In function 'void load_emoting_objects()':
obj_proc.cpp:120:10: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  120 |     fl = dc_fopen(EMOTING_FILE, "r");
      |          ^~~~~~~~
      |          do_open
news.cpp:128:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  128 |   dc_fclose(fl);
      |   ^~~~~~~~~
      |   do_close
obj_proc.cpp:198:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  198 |     dc_fclose(fl);
      |     ^~~~~~~~~
      |     do_close
scons: *** [game_portal.o] Error 1
non_off.cpp: In member function 'void CVoteData::OutToFile()':
non_off.cpp:1557:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1557 |   the_file = dc_fopen("vote_data", "w");
      |              ^~~~~~~~
      |              do_open
scons: *** [golem.o] Error 1
non_off.cpp:1597:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1597 |   dc_fclose(the_file);
      |   ^~~~~~~~~
      |   do_close
non_off.cpp: In constructor 'CVoteData::CVoteData()':
non_off.cpp:1622:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1622 |   the_file = dc_fopen("../lib/vote_data", "r");
      |              ^~~~~~~~
      |              do_open
non_off.cpp:1634:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1634 |     dc_fclose(the_file);
      |     ^~~~~~~~~
      |     do_close
non_off.cpp:1644:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1644 |     dc_fclose(the_file);
      |     ^~~~~~~~~
      |     do_close
fight.cpp: In function 'void load_messages(char*, int)':
fight.cpp:3637:15: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 3637 |    if (!(fl = dc_fopen(file, "r")))
      |               ^~~~~~~~
      |               do_open
non_off.cpp:1659:7: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1659 |       dc_fclose(the_file);
      |       ^~~~~~~~~
      |       do_close
non_off.cpp:1677:7: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1677 |       dc_fclose(the_file);
      |       ^~~~~~~~~
      |       do_close
fight.cpp:3699:4: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 3699 |    dc_fclose(fl);
      |    ^~~~~~~~~
      |    do_close
non_off.cpp:1692:7: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1692 |       dc_fclose(the_file);
      |       ^~~~~~~~~
      |       do_close
non_off.cpp:1704:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1704 |   dc_fclose(the_file);
      |   ^~~~~~~~~
      |   do_close
scons: *** [interp.o] Error 1
scons: *** [news.o] Error 1
quest.cpp: In function 'int load_quests()':
quest.cpp:64:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
   64 |    if(!(fl = dc_fopen(QUEST_FILE, "r"))) {
      |              ^~~~~~~~
      |              do_open
quest.cpp:97:4: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
   97 |    dc_fclose(fl);
      |    ^~~~~~~~~
      |    do_close
quest.cpp: In function 'int save_quests()':
quest.cpp:107:14: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  107 |    if(!(fl = dc_fopen(QUEST_FILE, "w"))) {
      |              ^~~~~~~~
      |              do_open
quest.cpp:127:4: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  127 |    dc_fclose(fl);
      |    ^~~~~~~~~
      |    do_close
wiz_109.cpp: In function 'int do_processes(char_data*, char*, int)':
wiz_109.cpp:105:13: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  105 |   if(!(fl = dc_fopen("../lib/whassup.txt", "a"))) {
      |             ^~~~~~~~
      |             do_open
wiz_109.cpp:111:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  111 |     dc_fclose(fl);
      |     ^~~~~~~~~
      |     do_close
wiz_109.cpp:116:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  116 |   dc_fclose(fl);
      |   ^~~~~~~~~
      |   do_close
wiz_109.cpp:118:13: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  118 |   if(!(fl = dc_fopen("../lib/whassup.txt", "r"))) {
      |             ^~~~~~~~
      |             do_open
wiz_105.cpp: In function 'int do_reloadhelp(char_data*, char*, int)':
wiz_105.cpp:75:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
   75 |   dc_fclose(help_fl);
      |   ^~~~~~~~~
      |   do_close
wiz_105.cpp:76:18: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
   76 |   if(!(help_fl = dc_fopen(HELP_KWRD_FILE, "r"))) {
      |                  ^~~~~~~~
      |                  do_open
wizard.cpp: In function 'void special_log(char*)':
wizard.cpp:1507:13: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1507 |   if(!(fl = dc_fopen("../lib/special.txt", "a"))) {
      |             ^~~~~~~~
      |             do_open
wizard.cpp:1513:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1513 |   dc_fclose(fl);
      |   ^~~~~~~~~
      |   do_close
wizard.cpp: In function 'void init_random_hunt_items(hunt_data*)':
wizard.cpp:1665:12: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1665 |   if ((f = dc_fopen("huntitems.txt", "r")) == NULL)
      |            ^~~~~~~~
      |            do_open
wizard.cpp:1688:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1688 |   dc_fclose(f);
      |   ^~~~~~~~~
      |   do_close
scons: *** [db.o] Error 1
vault.cpp: In function 'void save_vault(char*)':
vault.cpp:134:13: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  134 |   if(!(fl = dc_fopen(fname, "w"))) {
      |             ^~~~~~~~
      |             do_open
scons: *** [fight.o] Error 1
scons: *** [obj_proc.o] Error 1
social.cpp: In function 'void boot_social_messages()':
social.cpp:226:13: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  226 |   if(!(fl = dc_fopen(SOCIAL_FILE, "r"))) {
      |             ^~~~~~~~
      |             do_open
shop.cpp: In function 'void boot_the_shops()':
shop.cpp:739:17: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  739 |     if ( ( fp = dc_fopen( SHOP_FILE, "r" ) ) == NULL )
      |                 ^~~~~~~~
      |                 do_open
vault.cpp: In function 'void load_vaults()':
vault.cpp:641:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  641 |   if(!(index = dc_fopen(VAULT_INDEX_FILE, "r"))) {
      |                ^~~~~~~~
      |                do_open
social.cpp:255:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  255 |   dc_fclose(fl);
      |   ^~~~~~~~~
      |   do_close
shop.cpp:838:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  838 |     dc_fclose( fp );
      |     ^~~~~~~~~
      |     do_close
scons: *** [non_off.o] Error 1
vault.cpp:652:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  652 |   dc_fclose(index);
      |   ^~~~~~~~~
      |   do_close
shop.cpp: In function 'void write_one_player_shop(player_shop*)':
shop.cpp:943:15: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  943 |   if ( ( fp = dc_fopen( buf, "w" ) ) == NULL )
      |               ^~~~~~~~
      |               do_open
vault.cpp:659:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  659 |   if(!(index = dc_fopen(VAULT_INDEX_FILE, "r"))) {
      |                ^~~~~~~~
      |                do_open
shop.cpp:970:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  970 |   dc_fclose(fp);
      |   ^~~~~~~~~
      |   do_close
shop.cpp: In function 'void save_shop_list()':
shop.cpp:979:17: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  979 |     if ( ( fp = dc_fopen( PLAYER_SHOP_INDEX, "w" ) ) == NULL )
      |                 ^~~~~~~~
      |                 do_open
vault.cpp:670:15: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  670 |     if(!(fl = dc_fopen(fname, "r"))) {
      |               ^~~~~~~~
      |               do_open
shop.cpp:989:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  989 |     dc_fclose(fp);
      |     ^~~~~~~~~
      |     do_close
shop.cpp: In function 'void save_player_shop_world_range()':
shop.cpp:1010:11: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1010 |   if((f = dc_fopen(buf, "w")) == NULL) {
      |           ^~~~~~~~
      |           do_open
shop.cpp:1019:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1019 |   dc_fclose(f);
      |   ^~~~~~~~~
      |   do_close
shop.cpp: In function 'void boot_player_shops()':
shop.cpp:1032:17: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1032 |     if ( ( fp = dc_fopen( PLAYER_SHOP_INDEX, "r" ) ) == NULL )
      |                 ^~~~~~~~
      |                 do_open
shop.cpp:1044:23: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1044 |       if ( ( shopfp = dc_fopen( buf, "r" ) ) == NULL )
      |                       ^~~~~~~~
      |                       do_open
save.cpp: In function 'void save_char_obj(CHAR_DATA*)':
save.cpp:823:18: error: 'dc_fopen' was not declared in this scope; did you mean 'fopen'?
  823 |   if (!(fpsave = dc_fopen(strsave, "wb"))) {
      |                  ^~~~~~~~
      |                  fopen
shop.cpp:1058:7: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1058 |       dc_fclose( shopfp );
      |       ^~~~~~~~~
      |       do_close
save.cpp:859:7: error: 'dc_fclose' was not declared in this scope; did you mean 'fclose'?
  859 |       dc_fclose(fpsave);
      |       ^~~~~~~~~
      |       fclose
shop.cpp:1061:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1061 |     dc_fclose( fp );
      |     ^~~~~~~~~
      |     do_close
save.cpp:866:7: error: 'dc_fclose' was not declared in this scope; did you mean 'fclose'?
  866 |       dc_fclose(fpsave);
      |       ^~~~~~~~~
      |       fclose
save.cpp: In function 'void load_char_obj_error(FILE*, char*)':
save.cpp:886:5: error: 'dc_fclose' was not declared in this scope; did you mean 'fclose'?
  886 |     dc_fclose(fpsave);
      |     ^~~~~~~~~
      |     fclose
save.cpp: In function 'bool load_char_obj(descriptor_data*, char*)':
save.cpp:931:17: error: 'dc_fopen' was not declared in this scope; did you mean 'fopen'?
  931 |   if ((fpsave = dc_fopen(strsave, "rb" )) == NULL)
      |                 ^~~~~~~~
      |                 fopen
save.cpp:960:5: error: 'dc_fclose' was not declared in this scope; did you mean 'fclose'?
  960 |     dc_fclose(fpsave);
      |     ^~~~~~~~~
      |     fclose
nanny.cpp: In function 'bool check_deny(descriptor_data*, char*)':
nanny.cpp:2219:18: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 2219 |    if ((fpdeny = dc_fopen(strdeny, "rb")) == NULL)
      |                  ^~~~~~~~
      |                  do_open
scons: *** [wizard.o] Error 1
nanny.cpp:2221:4: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 2221 |    dc_fclose(fpdeny);
      |    ^~~~~~~~~
      |    do_close
utility.cpp: In function 'void log(const char*, int, long int, char_data*)':
utility.cpp:310:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  310 |     if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                ^~~~~~~~
      |                do_open
scons: *** [wiz_109.o] Error 1
scons: *** [quest.o] Error 1
utility.cpp:327:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  327 |     if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                ^~~~~~~~
      |                do_open
scons: *** [wiz_105.o] Error 1
utility.cpp:336:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  336 |     if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                ^~~~~~~~
      |                do_open
nanny.cpp: In function 'bool on_forbidden_name_list(char*)':
nanny.cpp:2706:15: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 2706 |    nameList = dc_fopen(FORBIDDEN_NAME_FILE, "ro");
      |               ^~~~~~~~
      |               do_open
utility.cpp:345:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  345 |     if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                ^~~~~~~~
      |                do_open
nanny.cpp:2722:7: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 2722 |       dc_fclose(nameList);
      |       ^~~~~~~~~
      |       do_close
utility.cpp:356:18: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  356 |       if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                  ^~~~~~~~
      |                  do_open
utility.cpp:363:18: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  363 |       if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                  ^~~~~~~~
      |                  do_open
utility.cpp:372:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  372 |     if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                ^~~~~~~~
      |                do_open
scons: *** [social.o] Error 1
utility.cpp:381:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  381 |     if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                ^~~~~~~~
      |                do_open
utility.cpp:390:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  390 |     if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                ^~~~~~~~
      |                do_open
utility.cpp:399:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  399 |     if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                ^~~~~~~~
      |                do_open
utility.cpp:408:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  408 |     if (!(*f = dc_fopen(logpath.str().c_str(), "a")))
      |                ^~~~~~~~
      |                do_open
utility.cpp:432:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  432 |     dc_fclose(*f);
      |     ^~~~~~~~~
      |     do_close
scons: *** [shop.o] Error 1
utility.cpp: In function 'bool file_exists(const char*)':
utility.cpp:585:8: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  585 |   fp = dc_fopen(filename, "r");
      |        ^~~~~~~~
      |        do_open
utility.cpp:587:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  587 |   dc_fclose(fp);
      |   ^~~~~~~~~
      |   do_close
vault.cpp: In function 'void add_new_vault(char*, int)':
vault.cpp:1783:15: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1783 |   if (!(vfl = dc_fopen(VAULT_INDEX_FILE, "r")))
      |               ^~~~~~~~
      |               do_open
vault.cpp:1805:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1805 |   dc_fclose(tvfl);
      |   ^~~~~~~~~
      |   do_close
utility.cpp: In function 'int do_idea(char_data*, char*, int)':
utility.cpp:1053:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1053 |     if (!(fl = dc_fopen(IDEA_LOG, "a"))) {
      |                ^~~~~~~~
      |                do_open
vault.cpp:1817:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1817 |   if (!(pvfl = dc_fopen(fname, "w")))
      |                ^~~~~~~~
      |                do_open
scons: *** [save.o] Error 1
utility.cpp:1061:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1061 |     dc_fclose(fl);
      |     ^~~~~~~~~
      |     do_close
vault.cpp: In function 'void vlog(const char*, const char*)':
vault.cpp:1926:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1926 |   if(!(ofile = dc_fopen(fname, "r"))) {
      |                ^~~~~~~~
      |                do_open
scons: *** [clan.o] Error 1
utility.cpp: In function 'int do_typo(char_data*, char*, int)':
utility.cpp:1084:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1084 |     if (!(fl = dc_fopen(TYPO_LOG, "a")))
      |                ^~~~~~~~
      |                do_open
vault.cpp:1941:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1941 |   if(!(nfile = dc_fopen(nfname, "w"))) {
      |                ^~~~~~~~
      |                do_open
utility.cpp:1094:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1094 |     dc_fclose(fl);
      |     ^~~~~~~~~
      |     do_close
utility.cpp: In function 'int do_bug(char_data*, char*, int)':
utility.cpp:1117:16: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 1117 |     if (!(fl = dc_fopen(BUG_LOG, "a"))) {
      |                ^~~~~~~~
      |                do_open
utility.cpp:1125:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 1125 |     dc_fclose(fl);
      |     ^~~~~~~~~
      |     do_close
wiz_102.cpp: In function 'int do_zsave(char_data*, char*, int)':
wiz_102.cpp:4343:11: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 4343 |   if((f = dc_fopen(buf, "w")) == NULL) {
      |           ^~~~~~~~
      |           do_open
wiz_102.cpp:4351:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 4351 |   dc_fclose(f);
      |   ^~~~~~~~~
      |   do_close
wiz_102.cpp: In function 'int do_rsave(char_data*, char*, int)':
wiz_102.cpp:4390:11: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 4390 |   if((f = dc_fopen(file.c_str(), "w")) == NULL) {
      |           ^~~~~~~~
      |           do_open
wiz_102.cpp:4402:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 4402 |   dc_fclose(f);
      |   ^~~~~~~~~
      |   do_close
wiz_102.cpp: In function 'int do_msave(char_data*, char*, int)':
wiz_102.cpp:4449:11: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 4449 |   if((f = dc_fopen(buf, "w")) == NULL) {
      |           ^~~~~~~~
      |           do_open
wiz_102.cpp:4461:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 4461 |   dc_fclose(f);
      |   ^~~~~~~~~
      |   do_close
wiz_102.cpp: In function 'int do_osave(char_data*, char*, int)':
wiz_102.cpp:4505:11: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 4505 |   if((f = dc_fopen(buf, "w")) == NULL) {
      |           ^~~~~~~~
      |           do_open
wiz_102.cpp:4517:3: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 4517 |   dc_fclose(f);
      |   ^~~~~~~~~
      |   do_close
wiz_102.cpp: In function 'int do_instazone(char_data*, char*, int)':
wiz_102.cpp:4568:19: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
 4568 |         if ((fl = dc_fopen(buf, "w")) == NULL) {
      |                   ^~~~~~~~
      |                   do_open
wiz_102.cpp:4570:17: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 4570 |                 dc_fclose(fl);
      |                 ^~~~~~~~~
      |                 do_close
wiz_102.cpp:4793:9: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
 4793 |         dc_fclose(fl);
      |         ^~~~~~~~~
      |         do_close
showplayerxp.cpp: In function 'bool my_load_char_obj(descriptor_data*, const char*)':
showplayerxp.cpp:301:17: error: 'dc_fopen' was not declared in this scope; did you mean 'do_open'?
  301 |   if ((fpsave = dc_fopen(strsave, "rb")) == NULL)
      |                 ^~~~~~~~
      |                 do_open
scons: *** [nanny.o] Error 1
showplayerxp.cpp:340:5: error: 'dc_fclose' was not declared in this scope; did you mean 'do_close'?
  340 |     dc_fclose(fpsave);
      |     ^~~~~~~~~
      |     do_close
scons: *** [vault.o] Error 1
scons: *** [wiz_102.o] Error 1
scons: *** [utility.o] Error 1
scons: *** [showplayerxp.o] Error 1
scons: building terminated because of errors.
